# pySimpleView

./: .gitignore  LICENSE  README.md  pyproject.toml
pysimpleview/: __init__.py  __main__.py  ai_dialogs.py  ai_settings_dialog.py  camera.py  config.py  device_dialog.py  log.py  main_window.py  naming.py  transform.py  video_view.py  vision_worker.py
pysimpleview/vision/: __init__.py  base.py  keys.py  provider.py
